; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_registry.c_registry_set_formatopts_all.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_registry.c_registry_set_formatopts_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SF_RTF = common dso_local global i32 0, align 4
@key_rtf = common dso_local global i32 0, align 4
@SF_TEXT = common dso_local global i32 0, align 4
@key_text = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @registry_set_formatopts_all(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @SF_RTF, align 4
  %6 = call i32 @reg_formatindex(i32 %5)
  %7 = load i32, i32* @key_rtf, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @registry_set_formatopts(i32 %6, i32 %7, i32* %8, i32* %9)
  %11 = load i32, i32* @SF_TEXT, align 4
  %12 = call i32 @reg_formatindex(i32 %11)
  %13 = load i32, i32* @key_text, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @registry_set_formatopts(i32 %12, i32 %13, i32* %14, i32* %15)
  ret void
}

declare dso_local i32 @registry_set_formatopts(i32, i32, i32*, i32*) #1

declare dso_local i32 @reg_formatindex(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
